force-app/main/default/objects/X7S_Adventure_Task__c/X7S_Adventure_Task__c.object-meta.xml
<CustomObject>
    <description>Object to support Learning Adventure Task records as part of the Learning Adventure accelerator from 7Summits.</description>
    <label>7S Adventure Task</label>
    <nameField>
        <label>7S Adventure Task Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>7S Adventure Tasks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>