force-app/main/default/objects/X7S_Adventure_Task__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <formula>Adventure_Module__r.Adventure_Step__r.Adventure__r.Account__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account</label>
    <type>Text</type>
</CustomField>