force-app/main/default/objects/X7S_Adventure_Task__c/fields/Adventure__c.field-meta.xml
<CustomField>
    <fullName>Adventure__c</fullName>
    <formula>Adventure_Module__r.Adventure_Step__r.Adventure__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Adventure</label>
    <type>Text</type>
</CustomField>