force-app/main/default/objects/X7S_Adventure_Task__c/fields/Adventure_Module__c.field-meta.xml
<CustomField>
    <fullName>Adventure_Module__c</fullName>
    <description>The Adventure Module that contains this Module Task</description>
    <inlineHelpText>The Adventure Module that contains this Module Task</inlineHelpText>
    <label>Adventure Module</label>
    <referenceTo>X7S_Adventure_Module__c</referenceTo>
    <relationshipName>X7S_Adventure_Modules</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>