force-app/main/default/objects/X7S_Adventure_Task__c/fields/Cascade__c.field-meta.xml
<CustomField>
    <fullName>Cascade__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Cascade this Adventure Task to a cloned Adventure when created or updated.</description>
    <label>Cascade</label>
    <type>Checkbox</type>
</CustomField>