force-app/main/default/objects/X7S_Adventure_Task__c/fields/Content_URL__c.field-meta.xml
<CustomField>
    <fullName>Content_URL__c</fullName>
    <description>The URL linking to the content of this Module Task</description>
    <inlineHelpText>The URL linking to the content of this Module Task</inlineHelpText>
    <label>Content Reference</label>
    <length>255</length>
    <type>Text</type>
</CustomField>