force-app/main/default/objects/X7S_Adventure_Task__c/fields/Custom_Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Custom_Icon_Name__c</fullName>
    <defaultValue>&apos;utility:info_alt&apos;</defaultValue>
    <description>Name of a custom icon to use when Resource Type of &quot;Custom&quot; selected.</description>
    <inlineHelpText>Enter the name of a valid SLDS icon.  Used only when Resource Type of &quot;Custom&quot; is selected.</inlineHelpText>
    <label>Custom Icon Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>