force-app/main/default/objects/X7S_Adventure_Task__c/fields/Icon_Name__c.field-meta.xml
<CustomField>
    <fullName>Icon_Name__c</fullName>
    <formula>IF(ISPICKVAL(Resource_Type__c  , &quot;Knowledge Base&quot;), &apos;utility:knowledge_base&apos;,
			IF(ISPICKVAL(Resource_Type__c  , &quot;question_answer&quot;), &apos;utility:questions_and_answers&apos;,
            IF(ISPICKVAL(Resource_Type__c  , &quot;Salesforce&quot;), &apos;utility:salesforce1&apos;,
            IF(ISPICKVAL(Resource_Type__c  , &quot;Trailhead&quot;), &apos;utility:trail&apos;,
            IF(ISPICKVAL(Resource_Type__c  , &quot;Video&quot;), &apos;utility:video&apos;,
            IF(ISPICKVAL(Resource_Type__c  , &quot;File&quot;), &apos;utility:file&apos;,
            IF(ISPICKVAL(Resource_Type__c  , &quot;Question&quot;), &apos;utility:question&apos;,
            IF(ISPICKVAL(Resource_Type__c  , &quot;Custom&quot;), Custom_Icon_Name__c,
            IF(ISPICKVAL(Resource_Type__c  , &quot;podcast_webinar&quot;), &apos;utility:podcast_webinar&apos;, &quot;&quot;)))))))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Icon Name</label>
    <type>Text</type>
</CustomField>