force-app/main/default/objects/X7S_Adventure_Task__c/fields/isNew__c.field-meta.xml
<CustomField>
    <fullName>isNew__c</fullName>
    <description>This will be checked if the Created Date of this record is more than 14 days ago</description>
    <formula>IF(TODAY() - 14 &lt;= DATEVALUE(CreatedDate), true, false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>This will be checked if the Created Date of this record is more than 14 days ago</inlineHelpText>
    <label>isNew</label>
    <type>Checkbox</type>
</CustomField>