force-app/main/default/objects/X7S_Adventure_Task__c/fields/Order_Module__c.field-meta.xml
<CustomField>
    <fullName>Order_Module__c</fullName>
    <formula>Adventure_Module__r.Order__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order (Module)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>