force-app/main/default/objects/X7S_Adventure_Task__c/fields/Source_Task_ID__c.field-meta.xml
<CustomField>
    <fullName>Source_Task_ID__c</fullName>
    <description>Record Id of the task from which this Adventure Task was originally cloned.</description>
    <label>Source Task ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>