force-app/main/default/objects/X7S_Adventure_Task__c/fields/Task_Content__c.field-meta.xml
<CustomField>
    <fullName>Task_Content__c</fullName>
    <description>Field used to display Rich Text content for the Task</description>
    <inlineHelpText>Field used to display Rich Text content for the Task</inlineHelpText>
    <label>Task Content</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>