force-app/main/default/objects/X7S_Adventure_Task__c/fields/Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Task_Due_Date__c</fullName>
    <description>The due date for this Task</description>
    <inlineHelpText>The due date for this Task</inlineHelpText>
    <label>Task Due Date</label>
    <type>Date</type>
</CustomField>