force-app/main/default/objects/X7S_Adventure_Task__c/fields/Template__c.field-meta.xml
<CustomField>
    <fullName>Template__c</fullName>
    <formula>Adventure_Module__r.Adventure_Step__r.Adventure__r.Template__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Template</label>
    <type>Checkbox</type>
</CustomField>