force-app/main/default/objects/X7S_Adventure_Task__c/validationRules/EnsureCustomIconName.validationRule-meta.xml
<ValidationRule>
    <fullName>EnsureCustomIconName</fullName>
    <active>true</active>
    <description>Ensure that if Resource Type Custom is selected, then the Custom Icon Name must be a populated and that it contains a &apos;:&apos; character.</description>
    <errorConditionFormula>OR (AND(ISPICKVAL(Resource_Type__c, &apos;Custom&apos;),
	       LEN(TRIM(Custom_Icon_Name__c)) = 0),
			 NOT(CONTAINS(Custom_Icon_Name__c, &apos;:&apos;)))</errorConditionFormula>
    <errorDisplayField>Custom_Icon_Name__c</errorDisplayField>
    <errorMessage>Please specify a SLDS icon name when a Resource Type of &quot;Custom&quot; is selected.  (Example: utility:info_alt)</errorMessage>
</ValidationRule>