force-app/main/default/objects/X7S_Adventure_Task__c/listViews/MyView.listView-meta.xml
<ListView>
    <fullName>MyView</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Order__c</columns>
    <filterScope>Everything</filterScope>
    <label>MyView</label>
</ListView>